# mfem-plates

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  common.hpp  panel_kl.cpp  panel_le.cpp  test.cpp  test2.cpp  tri_plate.mesh
